fixed toolbar items overflow due to incorrect offset of items alignment

--- a/source/Components/HapplaBox.Viewer/src/components/toolbar/styles.inline.scss
+++ b/source/Components/HapplaBox.Viewer/src/components/toolbar/styles.inline.scss
@@ -179,7 +179,7 @@
     }
   }
 
-  &.is--overflow {
+  &.item-align-start {
     .group-list {
       justify-content: start;
     }
